OZZ-10 форматирование текста сообщения вынесено в отдельную функцию

--- a/togo.org
+++ b/togo.org
@@ -1,2 +1,10 @@
-* add unlimited text.
-** split caption for image and text
+* Tasks 
+**  Цвета и шрифты в тексте.
+** Парсинг salsa.ru mambotribe
+** добавить like and dislake
+
+
+
+
+
+
