OZZ-10 short url link

--- a/togo.org
+++ b/togo.org
@@ -2,6 +2,7 @@
 **  Цвета и шрифты в тексте.
 ** Парсинг salsa.ru mambotribe
 ** добавить like and dislake
+** Парсить ссылки в тексте и делать их короткими
 
 
 
