--- a/togo.org
+++ b/togo.org
@@ -1,6 +1,2 @@
-* Tasks
-** DONE Цвета и шрифты в тексте.
-** TODO Парсинг salsa.ru mambotribe
-** TODO добавить like and dislake
-** TODO Парсить ссылки в тексте и делать их короткими
-** init_db реализован коряво.
+* add unlimited text.
+** split caption for image and text
