--- a/togo.org
+++ b/togo.org
@@ -7,3 +7,4 @@
 * DONE Невсегда корректно парсит. например 2mambo. No shit  19:18 28-Nov Это перепост.
   CLOSED: [2017-12-26 Вт 23:45]
 * Написать меню для настроек.
+* Исправить названия keybord
