--- a/togo.org
+++ b/togo.org
@@ -1,3 +1,6 @@
+* Деплой
+** Добавить пользователь в БД.
+** Конфиг для БД в alembic.ini
 * add unlimited text.
 ** split caption for image and text
 * DONE <2017-12-18 Пн> Отладить работу с cookie-redis.
